<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/entire_screen"
    tools:context=".panels.main_activities.MainScreenActivity">

    <ImageButton
        android:id="@+id/settings_imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:contentDescription="@string/settings_speakable_text"
        android:onClick="settingsButtonPressed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings_icon" />

    <ImageButton
        android:id="@+id/house_imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:contentDescription="@string/house_speakable_text"
        android:onClick="houseButtonPressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_icon" />

    <ImageButton
        android:id="@+id/info_imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#00000000"
        android:contentDescription="@string/info_speakable_text"
        android:onClick="infoButtonPressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/info_icon" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="229dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/house_imageButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/task_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintHeight_max="119dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <Button
        android:id="@+id/list_view_change"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:onClick="rotateLists"
        android:text="@string/cycle_calendar_views"
        app:layout_constraintBottom_toTopOf="@id/task_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toEndOf="@id/new_task"
        app:layout_constraintTop_toBottomOf="@id/calendar"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/new_task"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:onClick="bottomAddButtonPressed"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@id/task_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.779"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendar"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/add_event"
        android:layout_width="48dp"
        android:layout_height="52dp"
        android:layout_marginEnd="20dp"
        android:text="@string/add"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/list_view_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.991"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/house_imageButton"
        app:layout_constraintVertical_bias="0.064" />


</androidx.constraintlayout.widget.ConstraintLayout>