...
    <string name="sign_up">Sign up</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_constraints">- Must be at least 8 characters.\n- Must contain at least 1 lowercase and 1 uppercase letter.\n- Must contain at least 1 number.\n- Must contain at least 1 special character.\n- Cannot contain any whitespaces.\n- Both passwords must be the same.</string>
    <string name="reg_email_auth_failed">Authentication failed.</string>
    <string name="log_email_auth_failed">Email or password is wrong.</string>
    <string name="email_not_valid">Email is not valid.</string>
    <string name="password_not_valid">Password is not valid.</string>
    <string name="inputs_empty">Inputs must not be empty.</string>
    <string name="signout_intent">sign_out</string>

    <!-- Attachment menu -->
    <string name="attach">Attach</string>
    <string name="show">Show</string>
    <string name="remove">Remove</string>
...
