...
        android:id="@+id/item_checkbox"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/delete_item_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/item_delete_button_description"
...
